update with KIND config and docker repo

--- a/warden-k8s.yaml
+++ b/warden-k8s.yaml
@@ -15,7 +15,7 @@ spec:
   restartPolicy: OnFailure
   containers:
     - name: warden
-      image: theithollow/warden:v1
+      image: pythonrocks/warden:v1
       imagePullPolicy: Always
 ---
 apiVersion: v1
